--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-  "scripts":{
+  "scripts": {
     "start": "nodemon index.js"
   },
   "author": "Tejaswi Rayidi",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "razorpay": "^2.9.0"
   }
 }
